<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">Store is empty</string>
    <string name="empty_view_subtitle_text">Let\'s add something interesting</string>
    <string name="add_activity_title_new_product">Add Product</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="category_measurement">Measure</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="txt_supplier_name">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="action_save">Save</string>
    <string name="details_activity_title_new_product">Details</string>
    <string name="details_quantity">Quantity</string>
    <string name="details_product">Product</string>
    <string name="action_delete">Delete</string>



</resources>
