<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.zar.inventory.DetailsActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/details_product"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <!-- Name field -->
            <TextView
                android:id="@+id/details_txt_product_name"
                android:text="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:paddingBottom="15dp"/>

            <!-- Breed field -->
            <TextView
                android:id="@+id/details_txt_product_price"
                android:text="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle"
                android:paddingBottom="20dp"/>
        </LinearLayout>
    </LinearLayout>



    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/details_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/details_btn_dec"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:text="-"
                />

            <EditText
                android:id="@+id/details_product_quantity"
                android:hint="1"
                android:inputType="number"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                style="@style/EditorFieldStyle"
                android:gravity="center"/>


            <Button
                android:id="@+id/details_btn_inc"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:text="+"
                />
        </LinearLayout>

    </LinearLayout>

   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="20dp">
       <Button
           android:id="@+id/details_btn_order"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="order"
           />
       <Button
           android:id="@+id/details_btn_delete"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="delete"
           android:layout_marginLeft="20dp"
           />
   </LinearLayout>



</LinearLayout>
